bin/grammar.txt
program        → declaration* EOF ;
declaration    → varDeclaration | statement ;
varDeclaration → "var" IDENTIFIER ( "=" expression )? ";" ;
statement      → exprStmt | printStmt ;
exprStmt       → expression ";" ;
printStmt      → "print" expression ";" ;
expression     → assignment ;
assignment     → IDENTIFIER "=" assignment | equality ;
equality       → comparison (( "!=" | "==" ) comparison) * ;
comparison     → addition (( "<" | "<=" | ">" | ">=" ) addition) * ;
addition       → multiplication (( "-" | "+" ) multiplication) * ;
multiplication → unary (( "*" | "/" ) unary) * ;
unary          → (( "-" | "!" ) unary) | primary ;
primary        → "false" | "true" | "nil" | NUMBER | STRING | "(" expression ")" | IDENTIFIER ;



/* condensed, no precedence
expression -> literal | unary | binary | grouping ;
literal -> NUMBER | STRING | "true" | "false" | "nil" ;
grouping -> "(" expression ")" ;
unary -> ( "-" | "!" ) expression ;
binary -> expression operator expression ;
operator -> "==" | "!=" | "<" | "<=" | ">" | ">=" | "+" | "-" | "*" | "/" ;
*/
